--- a/mandelbulber2/formula/ui/menger_v6.ui
+++ b/mandelbulber2/formula/ui/menger_v6.ui
@@ -800,7 +800,7 @@
            <number>6</number>
           </property>
           <property name="minimum">
-           <double>0.000000000000000</double>
+           <double>-99.998999999999995</double>
           </property>
           <property name="maximum">
            <double>99.998999999999995</double>
@@ -1499,19 +1499,19 @@
           </layout>
          </item>
          <item>
-          <layout class="QGridLayout" name="gridLayout_16" columnstretch="0,1">
+          <layout class="QGridLayout" name="gridLayout_16" columnstretch="0,0,1">
            <property name="spacing">
             <number>2</number>
            </property>
            <item row="0" column="0">
             <widget class="QLabel" name="label_141">
              <property name="text">
-              <string notr="true">diag</string>
+              <string notr="true">diagonal</string>
              </property>
             </widget>
            </item>
-           <item row="0" column="1">
-            <widget class="MyDoubleSpinBox" name="spinbox4_fold_color_difs_0000_x">
+           <item row="8" column="2">
+            <widget class="MyDoubleSpinBox" name="spinbox_fold_color_difs1">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
                <horstretch>0</horstretch>
@@ -1538,7 +1538,69 @@
              </property>
             </widget>
            </item>
-           <item row="1" column="1">
+           <item row="9" column="0">
+            <widget class="QLabel" name="label_146">
+             <property name="text">
+              <string notr="true">cond3</string>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="0" rowspan="2">
+            <widget class="QLabel" name="label_144">
+             <property name="text">
+              <string notr="true">xz</string>
+             </property>
+            </widget>
+           </item>
+           <item row="3" column="0">
+            <widget class="MyCheckBox" name="checkBox_transf_function_enabledO_false">
+             <property name="font">
+              <font>
+               <weight>50</weight>
+               <bold>false</bold>
+              </font>
+             </property>
+             <property name="text">
+              <string> y  z-&gt;x</string>
+             </property>
+            </widget>
+           </item>
+           <item row="5" column="0">
+            <widget class="QLabel" name="label_143">
+             <property name="text">
+              <string notr="true">xy</string>
+             </property>
+            </widget>
+           </item>
+           <item row="9" column="2">
+            <widget class="MyDoubleSpinBox" name="spinbox_transf_scaleA_3">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="prefix">
+              <string/>
+             </property>
+             <property name="suffix">
+              <string/>
+             </property>
+             <property name="decimals">
+              <number>6</number>
+             </property>
+             <property name="minimum">
+              <double>-99.998999999999995</double>
+             </property>
+             <property name="maximum">
+              <double>99.998999999999995</double>
+             </property>
+             <property name="singleStep">
+              <double>0.100000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="2" column="2" rowspan="2">
             <widget class="MyDoubleSpinBox" name="spinbox4_fold_color_difs_0000_y">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -1566,7 +1628,7 @@
              </property>
             </widget>
            </item>
-           <item row="2" column="1">
+           <item row="5" column="2">
             <widget class="MyDoubleSpinBox" name="spinbox4_fold_color_difs_0000_z">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -1594,7 +1656,42 @@
              </property>
             </widget>
            </item>
-           <item row="3" column="1">
+           <item row="1" column="2">
+            <widget class="Line" name="line_4">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="2">
+            <widget class="MyDoubleSpinBox" name="spinbox4_fold_color_difs_0000_x">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+             <property name="prefix">
+              <string/>
+             </property>
+             <property name="suffix">
+              <string/>
+             </property>
+             <property name="decimals">
+              <number>6</number>
+             </property>
+             <property name="minimum">
+              <double>-99.999899999999997</double>
+             </property>
+             <property name="maximum">
+              <double>99.999899999999997</double>
+             </property>
+             <property name="singleStep">
+              <double>0.100000000000000</double>
+             </property>
+            </widget>
+           </item>
+           <item row="6" column="2" rowspan="2">
             <widget class="MyDoubleSpinBox" name="spinbox4_fold_color_difs_0000_w">
              <property name="sizePolicy">
               <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
@@ -1622,52 +1719,17 @@
              </property>
             </widget>
            </item>
-           <item row="1" column="0">
-            <widget class="QLabel" name="label_142">
+           <item row="8" column="0">
+            <widget class="QLabel" name="label_145">
              <property name="text">
-              <string notr="true">b:</string>
+              <string notr="true">cond1</string>
              </property>
             </widget>
            </item>
-           <item row="3" column="0">
-            <widget class="QLabel" name="label_144">
-             <property name="text">
-              <string notr="true">w</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="0">
-            <widget class="QLabel" name="label_143">
-             <property name="text">
-              <string notr="true">c:</string>
-             </property>
-            </widget>
-           </item>
-           <item row="4" column="1">
-            <widget class="MyDoubleSpinBox" name="spinbox_fold_color_difs1">
-             <property name="sizePolicy">
-              <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
-               <horstretch>0</horstretch>
-               <verstretch>0</verstretch>
-              </sizepolicy>
-             </property>
-             <property name="prefix">
-              <string/>
-             </property>
-             <property name="suffix">
-              <string/>
-             </property>
-             <property name="decimals">
-              <number>6</number>
-             </property>
-             <property name="minimum">
-              <double>-99.999899999999997</double>
-             </property>
-             <property name="maximum">
-              <double>99.999899999999997</double>
-             </property>
-             <property name="singleStep">
-              <double>0.100000000000000</double>
+           <item row="4" column="2">
+            <widget class="Line" name="line_5">
+             <property name="orientation">
+              <enum>Qt::Horizontal</enum>
              </property>
             </widget>
            </item>
